--- a/ProProjects/Data Science/MaskUsage_and_COVID-19.html
+++ b/ProProjects/Data Science/MaskUsage_and_COVID-19.html
@@ -28,12 +28,14 @@
       </header>
       <section>
         <h1>Mask Usage and COVID-19</h1>
+        <h4>09/2021 — 01/2022 (completed)</h4>
         <p>This project provided a data-based argument as to whether or not mask usage help prevent the spread of COVID-19. 
         While there are many valid arguments using scientific thought as to why this is the case, this project gives a simpler evidence-based, data-driven reason. 
         It examines data maintained by The New York Times on COVID-19 cases, deaths and mask usages and uses 
-        Nonparametric Statistical methods to determine the relationships present in the data. 
-        To read more about the project, view the results, code and final report, <a href="https://github.com/adriendinzey/COVID-19_Mask_Usage_Non-Parametric_Analysis_Project">
-        visit the GitHub repository here</a></p>
+        Nonparametric Statistical methods to determine the relationships present in the data. </p>
+        <br>
+        <h3>To read more about the project, view the results, code and final report, <a href="https://github.com/adriendinzey/COVID-19_Mask_Usage_Non-Parametric_Analysis_Project">
+        visit the GitHub repository here</a></h3>
       <footer>
       </footer>
     </div>
